{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 81,
  "lineage": "2fec00e1-f01a-fe8a-5c75-c31a4b840ebd",
  "resources": [
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:loadbalancer/net/dev-mq-broker-nlb/1de592937cbffc95",
            "arn_suffix": "net/dev-mq-broker-nlb/1de592937cbffc95",
            "dns_name": "dev-mq-broker-nlb-1de592937cbffc95.elb.eu-west-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:loadbalancer/net/dev-mq-broker-nlb/1de592937cbffc95",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "dev-mq-broker-nlb",
            "region": "eu-west-1",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06fcfebb638c2f3ba"
              },
              {
                "subnet_id": "subnet-0d8101445938b79d8"
              },
              {
                "subnet_id": "subnet-0e3ef6f230fdff909"
              }
            ],
            "subnets": [
              "subnet-06fcfebb638c2f3ba",
              "subnet-0d8101445938b79d8",
              "subnet-0e3ef6f230fdff909"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-nlb",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-nlb",
              "Project": "mq-cluster"
            },
            "vpc_id": "vpc-0575163435eebafe6",
            "zone_id": "Z2IFOLAFXWLO4F"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:loadbalancer/net/dev-mq-broker-nlb/1de592937cbffc95"
          },
          "dependencies": [
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mqtt",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:listener/net/dev-mq-broker-nlb/1de592937cbffc95/97e169057702ffe3",
            "certificate_arn": "arn:aws:acm:eu-west-1:490228638978:certificate/c2e4b0b0-c89a-48e3-b9f4-731533d9a458",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:listener/net/dev-mq-broker-nlb/1de592937cbffc95/97e169057702ffe3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:loadbalancer/net/dev-mq-broker-nlb/1de592937cbffc95",
            "mutual_authentication": [],
            "port": 8883,
            "protocol": "TLS",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:listener/net/dev-mq-broker-nlb/1de592937cbffc95/97e169057702ffe3"
          },
          "dependencies": [
            "module.mq.aws_acm_certificate.acm_issued",
            "module.mq.aws_acm_certificate.self_signed",
            "module.mq.aws_acm_certificate_validation.main",
            "module.mq.aws_lb.main",
            "module.mq.aws_lb_target_group.main",
            "module.mq.aws_route53_record.cert_validation",
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided",
            "module.mq.tls_private_key.main",
            "module.mq.tls_self_signed_cert.main"
          ]
        },
        {
          "index_key": "openwire",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:listener/net/dev-mq-broker-nlb/1de592937cbffc95/28b2d50d9792aeb1",
            "certificate_arn": "arn:aws:acm:eu-west-1:490228638978:certificate/c2e4b0b0-c89a-48e3-b9f4-731533d9a458",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:listener/net/dev-mq-broker-nlb/1de592937cbffc95/28b2d50d9792aeb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:loadbalancer/net/dev-mq-broker-nlb/1de592937cbffc95",
            "mutual_authentication": [],
            "port": 61617,
            "protocol": "TLS",
            "region": "eu-west-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:listener/net/dev-mq-broker-nlb/1de592937cbffc95/28b2d50d9792aeb1"
          },
          "dependencies": [
            "module.mq.aws_acm_certificate.acm_issued",
            "module.mq.aws_acm_certificate.self_signed",
            "module.mq.aws_acm_certificate_validation.main",
            "module.mq.aws_lb.main",
            "module.mq.aws_lb_target_group.main",
            "module.mq.aws_route53_record.cert_validation",
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided",
            "module.mq.tls_private_key.main",
            "module.mq.tls_self_signed_cert.main"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mqtt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2",
            "arn_suffix": "targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "8883",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-mq-broker-mqtt",
            "port": 8883,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-mqtt",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-mqtt",
              "Project": "mq-cluster"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0575163435eebafe6"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2"
          },
          "dependencies": [
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_subnet.provided"
          ]
        },
        {
          "index_key": "openwire",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2",
            "arn_suffix": "targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "61617",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-mq-broker-openwire",
            "port": 61617,
            "preserve_client_ip": "false",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "eu-west-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-openwire",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-openwire",
              "Project": "mq-cluster"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0575163435eebafe6"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2"
          },
          "dependencies": [
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_subnet.provided"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mqtt",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2-20260201132705120300000004",
            "port": 8883,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2",
            "target_id": "10.0.1.179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mq.aws_lb_target_group.main",
            "module.mq.aws_mq_broker.main",
            "module.mq.aws_security_group.main",
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        },
        {
          "index_key": "openwire",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2-20260201132705247000000005",
            "port": 61617,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2",
            "target_id": "10.0.1.179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mq.aws_lb_target_group.main",
            "module.mq.aws_mq_broker.main",
            "module.mq.aws_security_group.main",
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mqtt",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2-20260201132705113900000002",
            "port": 8883,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-mqtt/72bf89b52e2397f2",
            "target_id": "10.0.0.233"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mq.aws_lb_target_group.main",
            "module.mq.aws_mq_broker.main",
            "module.mq.aws_security_group.main",
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        },
        {
          "index_key": "openwire",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2-20260201132705113900000003",
            "port": 61617,
            "region": "eu-west-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:490228638978:targetgroup/dev-mq-broker-openwire/7e03495ca808d7d2",
            "target_id": "10.0.0.233"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mq.aws_lb_target_group.main",
            "module.mq.aws_mq_broker.main",
            "module.mq.aws_security_group.main",
            "module.mq.aws_subnet.main",
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:490228638978:security-group/sg-08e02ec0f91932603",
            "description": "Security group for dev-mq-broker MQ broker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e02ec0f91932603",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "AMQP",
                "from_port": 5671,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5671
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "MQTT",
                "from_port": 8883,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8883
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "OpenWire",
                "from_port": 61617,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61617
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "STOMP",
                "from_port": 61614,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61614
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Web Console",
                "from_port": 8162,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8162
              }
            ],
            "name": "dev-mq-broker-sg",
            "name_prefix": "",
            "owner_id": "490228638978",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-sg",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-sg",
              "Project": "mq-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0575163435eebafe6"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490228638978",
            "id": "sg-08e02ec0f91932603",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_subnet.provided"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:490228638978:subnet/subnet-0e3ef6f230fdff909",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3ef6f230fdff909",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490228638978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-subnet-eu-west-1a",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-subnet-eu-west-1a",
              "Project": "mq-cluster"
            },
            "vpc_id": "vpc-0575163435eebafe6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490228638978",
            "id": "subnet-0e3ef6f230fdff909",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:490228638978:subnet/subnet-06fcfebb638c2f3ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fcfebb638c2f3ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490228638978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-subnet-eu-west-1b",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-subnet-eu-west-1b",
              "Project": "mq-cluster"
            },
            "vpc_id": "vpc-0575163435eebafe6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490228638978",
            "id": "subnet-06fcfebb638c2f3ba",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:490228638978:subnet/subnet-0d8101445938b79d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8101445938b79d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490228638978",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-subnet-eu-west-1c",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-subnet-eu-west-1c",
              "Project": "mq-cluster"
            },
            "vpc_id": "vpc-0575163435eebafe6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490228638978",
            "id": "subnet-0d8101445938b79d8",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.mq.aws_vpc.main",
            "module.mq.data.aws_availability_zones.available",
            "module.mq.data.aws_subnet.provided"
          ]
        }
      ]
    },
    {
      "module": "module.mq",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:490228638978:vpc/vpc-0575163435eebafe6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f89b7b82064d449",
            "default_route_table_id": "rtb-0e9259e0a486bcb15",
            "default_security_group_id": "sg-07ada5dc61ffac184",
            "dhcp_options_id": "dopt-0d4cd3add2e5b43bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0575163435eebafe6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9259e0a486bcb15",
            "owner_id": "490228638978",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-mq-broker-vpc",
              "Project": "mq-cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-mq-broker-vpc",
              "Project": "mq-cluster"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "490228638978",
            "id": "vpc-0575163435eebafe6",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}